# tpDcc-libs-composite

./: .travis.yml  MANIFEST.in  README.md  README.rst  setup.cfg
tests/: test_general.py
tpDcc/libs/composite/: __init__.py  __logging__.ini  __version__.py  _version.py
tpDcc/libs/composite/core/: composition.py  consts.py  decorators.py
